--- a/JCKZ/JCKZ.vcxproj.filters
+++ b/JCKZ/JCKZ.vcxproj.filters
@@ -275,6 +275,9 @@
     <ClInclude Include="..\Inc\dataProcessing.h">
       <Filter>Header files\Inc</Filter>
     </ClInclude>
+    <ClInclude Include="..\Inc\systemClock.h">
+      <Filter>Header files\Inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Src\adc.c">
@@ -443,6 +446,9 @@
       <Filter>Source files\Src</Filter>
     </ClCompile>
     <ClCompile Include="..\Src\dataProcessing.c">
+      <Filter>Source files\Src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Src\systemClock.c">
       <Filter>Source files\Src</Filter>
     </ClCompile>
   </ItemGroup>
